# multi-git

./: Cargo.toml  README.md  build.rs
src/: alias.rs  cli.rs  clone.rs  config.rs  edit.rs  error.rs  exec.rs  git.rs  git_util.rs  git_utils.rs  logger.rs  main.rs  output.rs  print_utils.rs  progress.rs  pull.rs  resolve.rs  status.rs  walk.rs
src/cli/: clone.rs  edit.rs  exec.rs  pull.rs  resolve.rs  status.rs
src/walk/: skip_range.rs
tests/: pull.rs  status.rs
tests/setup/: detached_branch.setup  detached_branch_ahead.setup  detached_tag_ahead.setup  empty.setup  empty_branch.setup  index_added.setup  index_changed.setup  mod.rs  on_branch.setup  on_main.setup  upstream.setup  upstream_ahead.setup  upstream_behind.setup  upstream_detached.setup  upstream_diverged.setup  upstream_empty.setup  upstream_local_empty.setup  upstream_local_empty_on_branch.setup  upstream_on_branch.setup  upstream_working_tree_added.setup  upstream_working_tree_changed.setup  upstream_working_tree_overwrite.setup  working_tree_added.setup  working_tree_changed.setup
